Added PUT and DEL routes
